Diagram added, my part done

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@
 	margin-left: 100px;
 	margin-right: 100px;
 }
+
+#procs {
+	background-image: url("../images/procs.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 230px;
+	margin-left: 100px;
+	margin-right: 100px;
+}
